--- a/cloud/views/sector.ejs
+++ b/cloud/views/sector.ejs
@@ -24,9 +24,7 @@
 <body class="bg-light">
   <div class="container py-5">
     <div class="card shadow-sm">
-      <div class="card-header bg-primary text-white">
-        <h4 class="mb-0">Información del Sector</h4>
-      </div>
+      <div id="headerSector"></div>
       <div class="card-body">
         <h5 class="card-title" id="NombreSector">Sector: </h5>
         <p class="card-text" id="DescripcionSector"><strong>Descripción:</strong></p>
@@ -124,6 +122,8 @@
           </tbody>
         </table>
         
+        <div id="mensaje_historial"></div>
+        <br>
         <!-- HISTORIAL DE VÁLVULAS -->
         <div id="fichasHistorialValvulas" class="row row-cols-1 row-cols-md-2 g-4"></div>
         <br>
