--- a/cloud/views/sector.ejs
+++ b/cloud/views/sector.ejs
@@ -124,6 +124,22 @@
         
         <div id="mensaje_historial"></div>
         <br>
+
+        <div class="mb-3">
+          <label class="form-label">Filtrar Historial de Válvula</label>
+          <div class="row g-2">
+            <div class="col">
+              <input type="datetime-local" id="filtroFechaInicio" class="form-control" placeholder="Desde">
+            </div>
+            <div class="col">
+              <input type="datetime-local" id="filtroFechaFin" class="form-control" placeholder="Hasta">
+            </div>
+            <div class="col-auto">
+              <button onclick="filtrarHistorialValvulas()" class="btn btn-primary">Aplicar Filtro</button>
+            </div>
+          </div>
+        </div>
+        <br>        
         <!-- HISTORIAL DE VÁLVULAS -->
         <div id="fichasHistorialValvulas" class="row row-cols-1 row-cols-md-2 g-4"></div>
         <br>
@@ -213,7 +229,8 @@
 
     <script>
         const sectorid = "<%= SectorId %>";
-      </script>
+        let alDia = true;
+    </script>
     <script src="/js/sector.js"></script>
     <script src="/js/SocketSector.js"></script>
 
